# staller

./: CMakeLists.txt  README.md  StallerTest.cpp
source/: CMakeLists.txt  DFA.cpp  DFA.h  EntryPoint.h  Lex.cpp  Lex.h  NFA.cpp  NFA.h  Parse.cpp  Parse.h
